# polybot_crypto_up-down_15mins

./: .env.example  .gitignore  README.md
ops/: crontab
ops/systemd/: polybot.service  retrain.service  retrain.timer
rust/: Cargo.toml
rust/examples/: lr_vs_lgbm_decisional.rs  validate_per_symbol_alignment.rs
rust/src/: lib.rs  main.rs
rust/src/cli/: args.rs  cron.rs  mod.rs
rust/src/config/: bootstrap.rs  mod.rs  preflight.rs  settings.rs
rust/src/data/: backfill_candles.rs  backfill_macro.rs  backfill_outcomes.rs  coinalyze.rs  macro_calendar.rs  macro_poll.rs  mod.rs  okx_taker.rs  perp_poll.rs
rust/src/data/ws/: mod.rs  okx.rs
rust/src/db/: mod.rs  models.rs  notify.rs  queries.rs
rust/src/markets/: book_stream.rs  mod.rs  order_manager.rs  resolution.rs  resolver.rs
rust/src/migrations/: 001_init.sql
rust/src/model/: calibration.rs  mod.rs  retrain.rs
rust/src/model/features/: candle_builder.rs  feature_engineer.rs  mod.rs  normalizer.rs  pipeline.rs  tick_buffer.rs  types.rs
rust/src/model/inference/: mod.rs  model_hub.rs  predict.rs
rust/src/model/training/: lr_l1.rs  mod.rs  offline.rs
rust/src/runtime/: mod.rs  run.rs  signal.rs  trader.rs  warmup.rs
